--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
             android:layout_height="70dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:onClick="clk_tracking"
             android:background="@drawable/btn_main_color"
             android:gravity="center"
             android:orientation="horizontal"
