--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context="com.sputa.avarez.CarSearch">
+    tools:context="com.sputa.avarez.Tracking">
 
     <RelativeLayout
         android:id="@+id/lay_main"
