--- a/app/src/main/res/layout/activity_car_search.xml
+++ b/app/src/main/res/layout/activity_car_search.xml
@@ -28,13 +28,13 @@
                 android:background="@drawable/btn_red"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.9"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.8">
+                app:layout_constraintVertical_bias="0.92">
 
                 <com.sputa.avarez.my_views.MyTextView
                     android:id="@+id/lbl_pay"
@@ -78,7 +78,8 @@
             <com.sputa.avarez.my_views.MyTextView
                 android:id="@+id/lbl_msg"
                 android:layout_width="318dp"
-                android:layout_height="64dp"
+                android:layout_height="117dp"
+                android:lineSpacingExtra="5dp"
                 android:textAlignment="viewStart"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
@@ -87,7 +88,7 @@
                 app:layout_constraintHorizontal_bias="0.61"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.7" />
+                app:layout_constraintVertical_bias="0.8" />
 
             <LinearLayout
                 android:id="@+id/btn_search"
