--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -34,7 +34,7 @@
                 app:layout_constraintHorizontal_bias="0.9"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.8">
+                app:layout_constraintVertical_bias="0.98">
 
                 <com.sputa.avarez.my_views.MyTextView
                     android:id="@+id/lbl_pay"
@@ -78,7 +78,8 @@
             <com.sputa.avarez.my_views.MyTextView
                 android:id="@+id/lbl_msg"
                 android:layout_width="318dp"
-                android:layout_height="64dp"
+                android:layout_height="157dp"
+                android:lineSpacingExtra="10dp"
                 android:textAlignment="viewStart"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
@@ -87,7 +88,7 @@
                 app:layout_constraintHorizontal_bias="0.61"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.7" />
+                app:layout_constraintVertical_bias="0.86" />
 
             <LinearLayout
                 android:id="@+id/btn_search"
@@ -146,7 +147,7 @@
                 android:id="@+id/lbl_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="جستجوی خودرو"
+                android:text="پیگیری پرداخت عوارض"
                 android:textColor="@android:color/black"
                 android:textSize="32sp"
                 app:layout_constraintBottom_toBottomOf="parent"
