--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -19,6 +19,150 @@
             android:layout_height="match_parent"
             android:background="@drawable/btn_white">
 
+            <com.sputa.avarez.my_views.MyTextView
+                android:id="@+id/lbl_search_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="فیلد جستجو :"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.05"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.23000002" />
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/lay_motor_search"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.35000002">
+
+                <EditText
+                    android:id="@+id/txt_motor"
+                    android:layout_width="211dp"
+                    android:layout_height="37dp"
+                    android:height="35dp"
+                    android:background="@drawable/style_editview"
+                    android:gravity="center_vertical|start"
+                    android:hint="شماره موتور را وارد کنید"
+                    android:inputType="text"
+                    android:paddingStart="10dp"
+                    android:text=""
+                    android:textAlignment="viewStart"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.77"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.42000002" />
+
+                <ImageView
+                    android:id="@+id/img_help_motor"
+                    android:layout_width="31dp"
+                    android:layout_height="27dp"
+                    android:onClick="clk_help_motor"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.99"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.42000002"
+                    app:srcCompat="@drawable/help" />
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/lbl_motor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="شماره موتور :"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.05"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.42000002" />
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/lay_parvandeh_search"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.35000002">
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/lbl_parvandeh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="شماره پرونده ملی :"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.05"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.42000002" />
+
+                <ImageView
+                    android:id="@+id/img_help_parvandeh"
+                    android:layout_width="31dp"
+                    android:layout_height="27dp"
+                    android:onClick="clk_help_parvandeh"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.99"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.42000002"
+                    app:srcCompat="@drawable/help" />
+
+                <EditText
+                    android:id="@+id/txt_parvande"
+                    android:layout_width="211dp"
+                    android:layout_height="37dp"
+
+                    android:height="35dp"
+                    android:background="@drawable/style_editview"
+                    android:gravity="center_vertical|start"
+                    android:hint="شماره پرونده را وارد کنید"
+
+                    android:inputType="text"
+                    android:paddingStart="10dp"
+                    android:textAlignment="viewStart"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.77"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.42000002" />
+            </android.support.constraint.ConstraintLayout>
+
+            <Spinner
+                android:id="@+id/spn_search_type"
+                android:layout_width="191dp"
+                android:layout_height="37dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.8"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.23000002" />
+
             <LinearLayout
                 android:id="@+id/btn_pay"
                 android:layout_width="110dp"
@@ -156,98 +300,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.060000002" />
 
-            <EditText
-                android:id="@+id/txt_motor"
-                android:layout_width="211dp"
-                android:layout_height="37dp"
-                android:height="35dp"
-                android:background="@drawable/style_editview"
-                android:gravity="center_vertical|start"
-                android:hint="شماره موتور را وارد کنید"
-                android:inputType="text"
-                android:paddingStart="10dp"
-                android:textAlignment="viewStart"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.77"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.26999998" />
 
-
-            <com.sputa.avarez.my_views.MyTextView
-                android:id="@+id/lbl_motor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="شماره موتور :"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.05"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.26999998" />
-
-            <EditText
-                android:id="@+id/txt_parvande"
-                android:layout_width="211dp"
-                android:layout_height="37dp"
-
-                android:height="35dp"
-                android:background="@drawable/style_editview"
-                android:gravity="center_vertical|start"
-                android:hint="شماره پرونده را وارد کنید"
-
-                android:inputType="text"
-                android:paddingStart="10dp"
-                android:textAlignment="viewStart"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.77"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.42000002" />
-
-            <com.sputa.avarez.my_views.MyTextView
-                android:id="@+id/lbl_parvandeh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="شماره پرونده :"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.05"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.42000002" />
-
-            <ImageView
-                android:id="@+id/img_help_parvandeh"
-                android:layout_width="31dp"
-                android:layout_height="27dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.99"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.42000002"
-                android:onClick="clk_help_parvandeh"
-                app:srcCompat="@drawable/help" />
-
-            <ImageView
-                android:id="@+id/img_help_motor"
-                android:layout_width="31dp"
-                android:layout_height="27dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.99"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.26999998"
-                android:onClick="clk_help_motor"
-                app:srcCompat="@drawable/help" />
         </android.support.constraint.ConstraintLayout>
     </RelativeLayout>
 
