--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,7 +18,7 @@
             android:id="@+id/txt_software"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="نرم افزار پرداخت عوارض خودرو"
+            android:text="نرم افزار پرداخت عوارض شهرداری"
             android:textColor="@android:color/black"
             android:textSize="20sp" />
 
