--- a/app/src/main/res/layout/activity_ghabz_search.xml
+++ b/app/src/main/res/layout/activity_ghabz_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context="com.sputa.avarez.CarSearch">
+    tools:context="com.sputa.avarez.GhabzSearch">
 
     <RelativeLayout
         android:id="@+id/lay_main"
@@ -114,7 +114,7 @@
                 app:layout_constraintVertical_bias="0.23000002" />
 
             <android.support.constraint.ConstraintLayout
-                android:id="@+id/lay_motor_search"
+                android:id="@+id/lay_eshterak_search"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:visibility="visible"
@@ -126,13 +126,13 @@
                 app:layout_constraintVertical_bias="0.35000002">
 
                 <EditText
-                    android:id="@+id/txt_motor"
-                    android:layout_width="211dp"
+                    android:id="@+id/txt_eshterak"
+                    android:layout_width="204dp"
                     android:layout_height="37dp"
                     android:height="35dp"
                     android:background="@drawable/style_editview"
                     android:gravity="center_vertical|start"
-                    android:hint="شماره موتور را وارد کنید"
+                    android:hint="شماره اشتراک را وارد کنید"
                     android:inputType="text"
                     android:paddingStart="10dp"
                     android:text=""
@@ -149,6 +149,7 @@
                     android:layout_width="31dp"
                     android:layout_height="27dp"
                     android:onClick="clk_help_motor"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.99"
@@ -158,10 +159,10 @@
                     app:srcCompat="@drawable/help" />
 
                 <com.sputa.avarez.my_views.MyTextView
-                    android:id="@+id/lbl_motor"
+                    android:id="@+id/lbl_eshterak"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="شماره موتور :"
+                    android:text="شماره اشتراک :"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -173,7 +174,7 @@
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
-                android:id="@+id/lay_parvandeh_search"
+                android:id="@+id/lay_ghabz_search"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:visibility="gone"
@@ -185,10 +186,10 @@
                 app:layout_constraintVertical_bias="0.35000002">
 
                 <com.sputa.avarez.my_views.MyTextView
-                    android:id="@+id/lbl_shasi"
+                    android:id="@+id/lbl_ghabz"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="شماره شاسی :"
+                    android:text="شناسه قبض :"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -199,10 +200,11 @@
                     app:layout_constraintVertical_bias="0.42000002" />
 
                 <ImageView
-                    android:id="@+id/img_help_parvandeh"
+                    android:id="@+id/img_help_ghabz"
                     android:layout_width="31dp"
                     android:layout_height="27dp"
                     android:onClick="clk_help_shasi"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.99"
@@ -212,74 +214,14 @@
                     app:srcCompat="@drawable/help" />
 
                 <EditText
-                    android:id="@+id/txt_parvande"
+                    android:id="@+id/txt_ghabz"
                     android:layout_width="180dp"
                     android:layout_height="37dp"
 
                     android:height="35dp"
                     android:background="@drawable/style_editview"
                     android:gravity="center_vertical|start"
-                    android:hint="شماره شاسی را وارد کنید"
-
-                    android:inputType="text"
-                    android:paddingStart="10dp"
-                    android:textAlignment="viewStart"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.77"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.42000002" />
-            </android.support.constraint.ConstraintLayout>
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/lay_vin_search"
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.35000002">
-
-                <com.sputa.avarez.my_views.MyTextView
-                    android:id="@+id/lbl_vin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="شماره  VIN :"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.05"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.42000002" />
-
-                <ImageView
-                    android:id="@+id/img_help_vin"
-                    android:layout_width="31dp"
-                    android:layout_height="27dp"
-                    android:onClick="clk_help_vin"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.99"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.42000002"
-                    app:srcCompat="@drawable/help" />
-
-                <EditText
-                    android:id="@+id/txt_vin"
-                    android:layout_width="180dp"
-                    android:layout_height="37dp"
-
-                    android:height="35dp"
-                    android:background="@drawable/style_editview"
-                    android:gravity="center_vertical|start"
-                    android:hint="شماره VIN را وارد کنید"
+                    android:hint="شناسه قبض را وارد کنید"
 
                     android:inputType="text"
                     android:paddingStart="10dp"
@@ -305,7 +247,7 @@
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.9"
+                app:layout_constraintHorizontal_bias="0.42"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.88">
@@ -335,7 +277,7 @@
                 app:layout_constraintHorizontal_bias="0.9"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.98">
+                app:layout_constraintVertical_bias="0.88">
 
                 <com.sputa.avarez.my_views.MyTextView
                     android:id="@+id/lbl_detail"
@@ -375,22 +317,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.96" />
-
-            <com.sputa.avarez.my_views.MyTextView
-                android:id="@+id/lbl_msg"
-                android:layout_width="333dp"
-                android:layout_height="101dp"
-                android:background="@android:color/white"
-                android:lineSpacingExtra="5dp"
-                android:textAlignment="viewStart"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.58"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.762" />
 
             <LinearLayout
                 android:id="@+id/btn_search"
@@ -449,7 +375,7 @@
                 android:id="@+id/lbl_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="جستجوی خودرو"
+                android:text="جستجوی قبض"
                 android:textColor="@android:color/black"
                 android:textSize="32sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -469,6 +395,45 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.23000002" />
+
+            <LinearLayout
+                android:id="@+id/lay_message_main"
+                android:layout_width="348dp"
+                android:layout_height="116dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.73">
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/lbl_msg_right"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/white"
+                    android:lineSpacingExtra="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/lbl_msg_left"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/white"
+                    android:lineSpacingExtra="5dp"
+                    android:textAlignment="viewStart"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
 
         </android.support.constraint.ConstraintLayout>
@@ -573,6 +538,64 @@
             </LinearLayout>
 
         </LinearLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/lay_more_detail"
+            android:layout_width="320dp"
+            android:layout_height="400dp"
+            android:background="@drawable/btn_white"
+            android:visibility="invisible">
+
+            <com.sputa.avarez.my_views.MyTextView
+                android:id="@+id/lbl_more_detail_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="جزئیات قبض"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.04000002" />
+
+            <LinearLayout
+                android:id="@+id/lay_msg_more_detail"
+                android:layout_width="304dp"
+                android:layout_height="282dp"
+                android:background="#445566"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.48"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.71000004">
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/lbl_msg_right_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/white"
+                    android:lineSpacingExtra="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/lbl_msg_left_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/white"
+                    android:lineSpacingExtra="5dp"
+                    android:textAlignment="viewStart"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+            </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/lay_complete_info"
