--- a/app/src/main/res/layout/nav_header_drawer_test.xml
+++ b/app/src/main/res/layout/nav_header_drawer_test.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="مجید علمداری"
+        android:text="-"
         android:textAlignment="textStart"
         android:textColor="@android:color/black" />
 
@@ -38,13 +38,14 @@
             android:id="@+id/txt_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="09141484633"
+            android:text="-"
             android:textColor="@android:color/black" />
 
         <com.sputa.avarez.my_views.MyTextView
             android:id="@+id/txt_logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="clk_exit_profile"
             android:layout_marginStart="5dp"
             android:text="خروج"
             android:textColor="#0400d7" />
